# maca_lab

./: .gitignore
lab1/: CMakeLists.txt  check.h  helper_string.h  kernel.cpp  kernel.h  maca_allocator.h  main.cpp  readme.md
lab1/helper/: input.h  output.h
lab2/: CMakeLists.txt  README.md  helper_maca.h  helper_string.h  kernel.cpp  kernel.h  main.cpp
lab3/: CMakeLists.txt  README.md  common.h  kernel.cpp  kernel.h  main.cpp
lab3/helper/: common.hpp  input.h  output.h
lab4/: CMakeLists.txt  README.md  check.h  common.h  helper_maca.h  helper_string.h  kernel.cpp  kernel.h  main.cpp  stb_image.h
lab4/helper/: common.hpp  input.h  output.h
lab5/: CMakeLists.txt  README.md  common.h  kernel.cpp  kernel.h  main.cpp
lab5/helper/: common.hpp  input.h  output.h  output_types.h
lab6/: README.md  helper_maca.h  kernel.cpp  kernel.h  main.cpp
lab6/helper/: common.hpp  input.h  output.h  output_types.h
